# OS

./: .gitignore  .gitignore~  README.md  server.js
Arduino/: .cproject  .ino.cpp  .project  IC2_Interface.ino  btz_i2c.cpp  btz_i2c.h  btz_util.cpp  btz_util.h
Arduino/Release/: arduino.ar  btz_util.c.d  makefile  sources.mk  subdir.mk
Arduino/Release/UniBoardBase/: subdir.mk
Arduino/UniBoardBase/: .cproject  .ino.cpp  .project
Arduino/UniBoardBase/Release/: .gitignore  arduino.ar  makefile  sources.mk  subdir.mk
Arduino/UniBoardBase/header/: b_pin.h  b_types.h  btz_i2c.h  btz_util.h  config.h  eeprom_handler.h  io_bootstrap.h  servo.h
Arduino/UniBoardBase/source/: btz_i2c.cpp  btz_util.cpp  eeprom_handler.cpp  io_bootstrap.cpp  servo.cpp
Core/: CMakeLists.cmake  Makefile
Core/driver/: .project  Makefile  Makefile~  driver_common.h
Core/driver/StepperDriver/: .cproject
Core/driver/gpio_driver/: build.sh  gpio.cpp  gpio.h  gpio_btz.cpp  gpio_btz.h
Core/driver/i2c_base/: .cproject  .project  MakeFile  Makefile  i2c_base.c  i2c_base.h
Core/driver/i2c_base_cpp/: Makefile
Core/driver/i2c_btz/: .project  i2c_btz.h
Core/driver/pca9685Driver/: .cproject  Pca9685.cpp  Pca9685.h  pca9685.h
Core/exes/: CMakeLists.txt
Core/exes/serv/: .cproject  CMakeLists.txt  CMakeLists.txt.txt  Makefile  Makefile~  main.cpp  x_Makefile
Core/exes/serv/testing/: CMakeLists.txt  Makefile  driver_test.cpp  driver_test.h
Core/exes/serv/testing/socket_io_test/: CMakeLists.txt  Makefile  sio_test.cpp
Core/libssrc/: CMakeLists.cmake  CMakeLists.txt
Core/libssrc/EncoderClient/: CMakeLists.txt  Makefile  encoder_client.h
Core/libssrc/StepperDriver/: CMakeLists.txt  btz_stepper.cpp  btz_stepper.h
Core/libssrc/gpio_driver/: .cproject  CMakeLists.cmake  CMakeLists.txt  gpio_btz.cpp  gpio_btz.h
Core/libssrc/i2c_base_cpp/: CMakeLists.cmake  i2c_base.h
Core/libssrc/light/: Makefile  light.h
Core/serv/: .cproject  CMakeLists.txt  Makefile  Makefile~  cmake_Makefile  main.cpp
Core/serv/testing/: build.sh  driver_test.cpp  driver_test.h
Core/serv/testing/socket_io_test/: CMakeLists.txt  sio_test.cpp  sio_test.h  sio_test_con_listener.cpp  sio_test_con_listener.h
Docs/: Communication.txt
NodeCore/: package.json  server.js  server.js~  ssp.sh  test.js  upr.sh
NodeCore/data/: config.json
NodeCore/data/tests/: defaultDriveTask.json  steeringCtrlTest.json
NodeCore/int_modules/: BTZ_Math.js  StepperDriver.js  StepperDriverSoft.js  StepperDriverSoft.js~  configReader.js  driveControl.js  encoderClient.js  gamepad.js  steeringCalibrate.js  steeringControl.js
NodeCore/int_modules/steeringRamps/: defaultRamp.js
NodeCore/tests/: joystickTest.js  softStepperTest.js  softStepperTest.js~  steeringCtrlTest.js  steeringTest.js
OLD/: uAutoCommit.sh
OLD/Core/: Makefile
OLD/Core/exes/: Makefile
OLD/Core/exes/serv/testing/socket_io_test/: CMakeLists.txt
OLD/Core/include/: i2c_btz.h
OLD/Core/libssrc/: CMakeLists.txt  Makefile
OLD/Core/libssrc/light/: CMakeLists.txt
OLD/Docs/: Communication.txt
OLD/NodeCore/: package.json  server.js~
OLD/NodeCore/int_modules/: StepperDriverSoft.js  steeringControl.js
OLD/NodeCore/tests/: softStepperTest.js  softStepperTest.js~
OLD/PCB/BOM/: EncoderServer  Switch
OLD/PCB/Dashboard/: Sch.b#1  Sch.b#3  Sch.b#4  Sch.b#6  Sch.b#7  Sch.b#8  Sch.b#9  Sch.s#1  Sch.s#2  Sch.s#6  Sch.s#9
OLD/PCB/EagleLibs/: Btz.l#1  Btz.l#3  Btz.l#4  Btz.l#5  Btz.lbr
OLD/PCB/EncoderServer/: BOM  Sch.b#1  Sch.b#3  Sch.b#4  Sch.b#5  Sch.b#6  Sch.b#8  Sch.b#9  Sch.brd  Sch.pro  Sch.s#2  Sch.s#4  Sch.s#5  Sch.s#6  Sch.s#7  Sch.s#8  Sch2.b#1  Sch2.b#2  Sch2.b#3  Sch2.b#6  Sch2.b#9  Sch2.brd  Sch2.pro  Sch2.s#2  Sch2.s#3  Sch2.s#4  Sch2.s#5  Sch2.s#6  Sch2.sch  eagle.epf  untitled.b##
OLD/PCB/FrontLight/: BOM.txt
OLD/PCB/Light/: Sch.b#1  Sch.b#2  Sch.b#8  Sch.b#9  Sch.pro  Sch.s#1  Sch.s#3  Sch.s#5  Sch.s#6  (+2 more)
OLD/httpserver/: server.js
OLD/scripts/: build_commands.txt
PCB/: .Atmel-ATMEGA328P-AU.lbr.lck  EncoderServer.fzz
PCB/BTZ/: .Schaltkasten.sch.lck  Schaltkasten.s#1  eagle.epf
PCB/Dashboard/: Sch.b#5  Sch.s#3  Sch.s#4  Sch.s#7  Sch_test.brd  eagle.epf
PCB/EagleLibs/: Btz.l#2  Btz.l#6  Btz.l#7  Btz.l#8  Btz.l#9
PCB/EncoderServer/: .Sch.sch.lck  Sch.b#2  Sch.b#7  Sch.s#1  Sch.s#3  Sch.s#9  Sch.sch  Sch2.b#4  Sch2.b#5  Sch2.b#7  Sch2.b#8  Sch2.s#1  Sch_snap.scr
PCB/Libraries/: Atmel-ATMEGA328P-AU.lbr  Btz.lbr
PCB/Light/: Sch.b#3  Sch.brd  Sch.s#9
PCB/Switch/: Sch.b#1  Sch.b#6  Sch.b#9  Sch.brd  Sch.pro  Sch.s#2  Sch.s#6  Sch.s#7  Sch_2.b#2  Sch_2.b#4  Sch_2.b#5  Sch_2.s#3  Sch_2.s#7  Sch_2.s#8
Zeichnungen/: Kupplung_kasette_getriebe.skb  Kupplung_kasette_getriebe.skp  Mainboard.fzz  Ritzelnabe_lenkgetriebe.skb  Ritzelnabe_lenkgetriebe.skp  Ritzelnabe_lenkmotor.skb  Ritzelnabe_lenkmotor.skp  bollerwagenrahmen.skp  bollerwagenrahmen~.skp  kupplung_mitte.FCStd  test.stl  test2.stl
arduino/EncoderServer/: Board.h  EncoderServer.ino  EncoderServer.vcxproj  EncoderServer.vcxproj.filters  NetworkConfig.h
arduino/btz_interface/: btz_interface.ino  stepper.cpp  stepper.h
arduino/examples/: .cproject  .ino.cpp  .project  i2c_master.ino  spec.d
arduino/i2c_encoder/: i2c_encoder.ino
common/: btz_util.c  btz_util.h
httpserver/: guest.js~  server.js  server.js~
httpserver/intern_modules/: btz.js  util.js
httpserver/public/: db.html  guest.js  index.html  sensoren.txt
httpserver/rethinkdb_data/: log_file
public/: index.html
public/css/: mycss.css
public/html_modules/: dash.html
public/js/: btz-client.js  myjs.js  socket.js
public/json/: test.json
raspi/i2c/: Makefile  btz_i2c.c  btz_i2c.h
scripts/: build_commands.txt
tests/arduino_btz_i2c/: .cproject
tests/c++_libs/: calc.c
tests/cpp_socketio/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  siotest.cpp
tests/node_encoder/: app.js  app2.js  encoderClient.js
tests/node_joystick/: app.js  app1_2.js  app2.js
tests/node_test/: app.js
tests/rapi_arduino_btz_i2c/: build.sh  build_light.sh  light.cpp  main.cpp  myMain
(+234 files in other folders)
