cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
include_directories(/usr/local/lib)
include(/home/pi/Git/socket.io-client-cpp/CMakeLists.txt)
set(mainSource )
add_executable(main.app main.cpp /home/pi/Git/OS/Core/driver/gpio_driver/gpio.h /home/pi/Git/OS/Core/serv/testing/socket_io_test/sio_test.cpp /home/pi/Git/OS/Core/driver/SoftDriver/light/light.h /home/pi/Git/OS/Core/driver/SoftDriver/EncoderClient/encoder_client.h /home/pi/Git/OS/Core/serv/testing/driver_test.h /home/pi/Git/OS/Core/serv/testing/socket_io_test/sio_test.h)
set_property(TARGET main.app PROPERTY CXX_STANDARD 11)
set_property(TARGET main.app PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries(main.app /home/pi/Git/OS/Core/driver/i2c_base_cpp/i2c_base.o)
target_link_libraries(main.app /home/pi/Git/OS/Core/driver/SoftDriver/EncoderClient/encoder_client.o)
target_link_libraries(main.app /home/pi/Git/OS/Core/driver/SoftDriver/light/light.o)
target_link_libraries(main.app /home/pi/Git/OS/Core/serv/testing/driver_test.o)
target_link_libraries(main.app /home/pi/Git/OS/Core/driver/gpio_driver/gpio.o)
target_link_libraries(main.app sioclient)
target_link_libraries(main.app pthread )
target_link_libraries(main.app wiringPi )
target_link_libraries(main.app wiringPiDev )
target_link_libraries(main.app m )
message(STATUS ${Boost_INCLUDE_DIRS} )
#target_include_directories(sio_test PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../src" ${Boost_INCLUDE_DIRS} )
