cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
FIND_PACKAGE(Boost)
IF (Boost_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
    ADD_DEFINITIONS( "-DHAS_BOOST" )
ENDIF()
include(/home/pi/Git/socket.io-client-cpp/CMakeLists.txt)
add_library(sio_test SHARED sio_test.cpp sio_test.h)
set_property(TARGET sio_test PROPERTY CXX_STANDARD 11)
set_property(TARGET sio_test PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries(sio_test /home/pi/Git/OS/Core/driver/i2c_base_cpp/i2c_base.o)
target_link_libraries(sio_test sioclient)
target_link_libraries(sio_test pthread )
message(STATUS ${Boost_INCLUDE_DIRS} )
#target_include_directories(sio_test PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../src" ${Boost_INCLUDE_DIRS} )
